--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <div class="user">
        <img src="photo.jpg">
-       <h5 class="nm">Blessian D Jutike</h5>
+       <h5 class="nm">Sachin Konda</h5>
        <p class="jb">Student</p>
        </div>
        <nav class="nv">
@@ -27,11 +27,11 @@
         <h1 class="heading"><span>Details about me</span></h1>
         <div class="Row">
         <div class="det">
-             <h3><span>Name: </span>Blessian D Jutike</h3>
-             <h3><span>Age: </span>30</h3>
-             <h3><span>Gender: </span>Female</h3>
-             <h3><span>Email: </span>blessi000@hmail.com</h3>
-             <h3><span>Phone_no: </span>9875555555</h3>    
+             <h3><span>Name: </span>Sachin Konda</h3>
+             <h3><span>Age: </span>21</h3>
+             <h3><span>Gender: </span>Male</h3>
+             <h3><span>Email: </span>sachinkonda35@gmail.com</h3>
+             <h3><span>Phone_no: </span>8050890314</h3>    
         </div>
     </div>
     </section>
@@ -39,28 +39,28 @@
     <h1 class="title"><span>Education</span></h1><br><br><br>
     <table>
         <tr>
-            <th>Cource</th>
+            <th>Course</th>
             <th>Name of the institude</th>
             <th>University</th>
             <th>Percentage</th>
         </tr>
         <tr>
-            <td>SSCL</td>
-            <td>William Richards High School</td>
-            <td>KSEEB</td>
-            <td>70</td>
+            <td>X</td>
+            <td>Guru Nanak Public school</td>
+            <td>CBSE</td>
+            <td>7.0</td>
         </tr>
         <tr>
-            <td>Diploma</td>
-            <td>Govt Polyechnic Immadihalli</td>
-            <td>DTE</td>
-            <td>68</td>
+            <td>XII</td>
+            <td>Dr.Channabasaveshwar Pu college</td>
+            <td>State Board</td>
+            <td>77</td>
         </tr>
         <tr>
             <td>BE</td>
-            <td>New Horizon College</td>
+            <td>Cambridge Institute of technology</td>
             <td>VTU</td>
-            <td>60</td>
+            <td>6.5</td>
         </tr>
     </table>
 </section>
@@ -70,16 +70,16 @@
     <div>
     <ul id="lis">
         <li>Java</li>
-        <li>C++</li>
+        <!-- <li>C++</li> -->
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>Angular</li>
         <li>Oracle</li>
         <li>MySQL</li>
-        <li>Python</li>
-        <li>Manual Testing</li>
-        <li>Automation Testing</li>
+        <!-- <li>Python</li> -->
+        <!-- <li>Manual Testing</li>
+        <li>Automation Testing</li> -->
         <li>Data Structures</li>
     </ul>
 </div>
@@ -89,18 +89,19 @@
     <div class="Row">
         <div class="det">
     <h3><span>Role: </span>Team member</h3>
-    <h3><span>Title: </span>Eye state detection of driver</h3>
-    <h3><span>Description: </span>Developing intelligent systems to prevent accidents
-                can be bery effective in minimizingaccident death toll. 
-                Drivers fatigue is one of the major causes of traffic 
-                accidents,particularly for drivers of large vehicles
-                (such as buses and heavy trucks)due to prolonged driving
-                in working conditions. This project detects the signs of 
-                fatigue and sleepiness in the face of the person at the 
-                time of driving in this model, the person's face is filmed 
-                by a camera in the first step by receiving video sequence, 
-                the level of drowsiness is detected.</h3>
+    <h3><span>Title: </span>Autonomous Driving</h3>
+    <h3><span>Description: </span> Autonomous cars are the future smart cars anticipated to be driverless cars, efficient and crash
+        avoiding ideal urban car of the future. To reach this goal automakers have started working on this area
+        to realized to potential and solve the challenges currently in this area to reach the expected outcome.</h3>
             </div>
+            <br>
+        <!-- <div class="det">
+            <h3><span>Role: </span>Team member</h3>
+    <h3><span>Title: </span>Real Estate Management System</h3>
+    <h3><span>Description: </span> Real Estate Management System (REMS) is an online real estate software application that manages
+        the overall operational activities and processes, starting from the management of the property, to the
+        management of real estate agencies, agents, clients and financial transactions.</h3>
+        </div> -->
 </div>
 </section>
 </body>
